# premio-tronchi-bot

./: .dockerignore  .env.example  .gitignore  Dockerfile  README.md  docker-compose.yml  pyproject.toml  render.yaml  requirements.txt
deploy/oracle/: docker-compose.oracle.yml
k8s/: README.md  configmap.yaml  deployment.yaml  kustomization.yaml  persistentvolumeclaim.yaml  secret.example.yaml
src/premio_tronchi/: __init__.py  bot.py  config.py  fantacalcio.py  main.py  storage.py
